@@ -68,7 +68,8 @@ F</usr/share/tasksel/debian-tasks.desc>
 
 =head1 AUTHOR
 
-tasksel was written by Randolph Chung E<lt>tausq@debian.orgE<gt>.
+tasksel was written by Randolph Chung E<lt>tausq@debian.orgE<gt>
+and Joey Hess E<lt>joeyh@debiam.orgE<gt>
 
 =head1 HISTORY 
 
