@@ -5,6 +5,8 @@ tasksel (2.07) UNRELEASED; urgency=low
     - Document --new-install and long format switches.
     - Add --task-packages switch, may be used by Synaptic.
     - Add --task-desc switch. Closes: #259664
+    - Re-organised the documentation.
+    - Modularised how the list of packages in a task is determined.
   * Translations
     - Kęstutis Biliūnas
       - Updated Lithuanian translation of tasks.
